Fix space description mobile

--- a/wp-content/themes/noia-theme/assets/css/editor-style.css
+++ b/wp-content/themes/noia-theme/assets/css/editor-style.css
@@ -389,6 +389,7 @@ p.small,
 p.lead,
 .lead {
   font-size: 22px;
+  margin-bottom: var(--spacing-xs);
 }
 @media (min-width: 50em) {
   p.lead,
@@ -1651,12 +1652,21 @@ hr {
 .space-description-item {
   width: 100%;
   padding: 1rem;
+  padding-bottom: 0;
 }
 @media (min-width: 50em) {
   .space-description-item {
     width: 50%;
     padding: var(--spacing);
     padding-right: var(--spacing-l);
+  }
+}
+.space-description-item .share {
+  padding: 0.5rem 0 1.6rem 0;
+}
+@media (min-width: 50em) {
+  .space-description-item .share {
+    padding: 0.5rem 0 0 0;
   }
 }
 .space-description-item .share p {
