--- a/wp-content/themes/noia-theme/src/styles/base/_typography.scss
+++ b/wp-content/themes/noia-theme/src/styles/base/_typography.scss
@@ -16,6 +16,7 @@ p.small,
 p.lead,
 .lead {
 	font-size: 22px;
+	margin-bottom: var(--spacing-xs);
 	@include mq(medium) {
 		font-size: var(--font-size-lead);
 	}
